@@ -1,7 +1,7 @@
 (** Annotations *)
 
 (** List the annotations to standard output in a given encoding. See cpdfmanual.pdf for the format details. *)
-val list_annotations : json:bool -> Cpdfmetadata.encoding -> Pdf.t -> unit
+val list_annotations : json:bool -> int list -> Cpdfmetadata.encoding -> Pdf.t -> unit
 
 (** Return the annotations as a (pagenumber, content) list *)
 val get_annotations : Cpdfmetadata.encoding -> Pdf.t -> (int * string) list
