@@ -2,6 +2,7 @@
 %Document -font-ttf
 %Document -draw and friends
 %Document -png -jpeg
+%Document -list-annotations[-json] now obey page range
 \documentclass{book}
 % Edit here to produce cpdfmanual.pdf, cpdflibmanual.pdf, pycpdfmanual.pdf,
 % dotnetcpdflibmanual.pdf, jcpdflibmanual.pdf jscpdflibmanual.pdf etc.
