@@ -13,6 +13,7 @@ Extended features:
 o Allow -utf8 with -split-bookmarks -o @B.pdf to produce UTF8 filenames
 o -merge-add-bookmarks now works with unicode filenames
 o Better transformation of some annotation types
+o -list-annotations[-json] now respects page range
 
 Fixes:
 
